# privacy-engg-lab

./: README.md
ai-privacy-guard/: .gitignore  README.md  pyproject.toml
ai-privacy-guard/examples/: quickstart.py  sample_config.json
ai-privacy-guard/src/ai_privacy_guard/: __init__.py  cli.py  engine.py  evaluator.py  models.py  policy_loader.py
ai-privacy-guard/src/ai_privacy_guard/checks/: __init__.py  metadata_check.py  missing_data_classification_check.py  pii_check.py  region_check.py  retention_check.py  sensitive_data_check.py  transfer_check.py
ai-privacy-guard/src/ai_privacy_guard/policies/: default_us_privacy.yaml  financial_services.yaml
ai-privacy-guard/tests/: test_cli.py  test_engine.py
